--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My EKS Project</title>
 </head>
-<body badattribute="true">
-    <h1>Hello World, my name is Oluwatosin Jegede</h1>
+<body>
+    <h1>Hello World, my name is Oluwatosin Jegede
 </body>
 </html>
