corrected index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My EKS Project</title>
 </head>
 <body>
-    <h1>Hello World, my name is Oluwatosin Jegede
+    <h1>Hello World, my name is Oluwatosin Jegede</h1>
 </body>
 </html>
